# test_task

repo/task/: README.md  pyproject.toml  setup.cfg
repo/task/.cache/nitpick/: merged-style.toml  styles.sqlite
repo/task/main/: main.py
repo/task/main/download/: Makefile
repo/task/main/project-configuration/: pyproject.toml
repo/task/tests/: test.py
repo/task/tests/project-configuration/: README.md  cookiecutter.json
