[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style.toml"

[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["'Selan01' <selan0@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pendulum = "^3.0.0"
pytest = "^8.1.1"
asyncio = "^3.4.3"
aiofiles = "^23.2.1"
aiohttp = "^3.9.3"
wemake-python-styleguide = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
